# nishkarsha

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_extractor/: __init__.py  date_extractor.py  email_extractor.py  number_extractor.py  pattern_extractor.py  url_extractor.py
src/agent_extractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_date_extractor.py  test_email_extractor.py  test_number_extractor.py  test_pattern_extractor.py  test_url_extractor.py
